Fix vertical scrolling on project page. Spacing and styling on project cards

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,8 @@
 .MuiAppBar-root {
     background-color: black !important;
     opacity: 0.8;
+    position: fixed !important;
+    top: 0;
 }
 
 .resume-links {
